# tables

./: .gitignore  Cargo.toml  README.md  review.html
.github/workflows/: linux.yml  pages.yml  release.yml  windows-package.yml  windows.yml
assets/: icon.icns  settings.example.json  tables.desktop  tables.entitlements
crates/ai/: Cargo.toml
crates/ai/src/: anthropic.rs  config.rs  lib.rs
crates/app/: Cargo.toml
crates/app/src/: bridge.rs  main.rs  root.rs  sheet.rs  state.rs  theme.rs  toasts.rs
crates/app/src/home/: card.rs  form.rs  mod.rs  url.rs
crates/app/src/workspace/: assistant.rs  charts.rs  compare.rs  dbswitcher.rs  erdiagram.rs  extensions.rs  filter.rs  grid.rs  insert.rs  mod.rs  review.rs  sessions.rs  settings.rs  sidebar.rs  structedit.rs  structure.rs
crates/app/src/workspace/data/: actions.rs  mod.rs  panels.rs
crates/app/src/workspace/query/: actions.rs  complete.rs  format.rs  mod.rs  panels.rs
crates/db/: Cargo.toml
crates/db/src/: dialect.rs  engine.rs  filters.rs  health.rs  lib.rs  mysql.rs  postgres.rs  registry.rs  roundtrip.rs  sqlite.rs  tunnel.rs
crates/host/: Cargo.toml
crates/host/src/: compare.rs  csv.rs  data.rs  ddl.rs  facade.rs  generate.rs  lib.rs  mock.rs  query.rs  records.rs  sessions.rs  tables.rs  values.rs
crates/model/: Cargo.toml
crates/model/src/: analysis.rs  connection.rs  health.rs  history.rs  lib.rs  macros.rs  plugin.rs  query.rs  schema.rs  session.rs  settings.rs  transfer.rs  util.rs
crates/store/: Cargo.toml
crates/store/src/: connections.rs  favorites.rs  history.rs  keychain.rs  lib.rs  macros.rs  paths.rs  plugins.rs  settings.rs  tabs.rs
docs/: README.md  release.md  review.md
docs/guides/: architecture.md  connections.md  development.md  editor.md  grid.md  keyboard.md  privacy.md  schema.md  troubleshooting.md
docs/guides/getting/: started.md
packaging/: README.md
packaging/chocolatey/: tables.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/scoop/: tables.json
packaging/windows/: tables.wxs
scripts/: bundle.sh  dmg.sh  icon.sh  icon.swift  linux.sh  windows.ps1
site/: docs.html  index.html  review.html  site.js  styles.css
