[package]
name = "model"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared domain types for Tables — serde shapes that mirror the on-disk JSON."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
